# OpenGL-Course

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
Assets/Models/Floor/: 332966_23_07_19_14_14_48.mtl
Assets/Models/Lantern/: 333755_23_07_20_01_34_09.mtl
Assets/Models/calvinhobbes/: license.txt  scene.gltf
Assets/Shaders/: shader.frag
Core/Private/: Camera.cpp  DirectionalLight.cpp  Editor.cpp  Engine.cpp  Entity.cpp  Game.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  PointLight.cpp  Shader.cpp  Skybox.cpp  SpotLight.cpp  Transform.cpp  Window.cpp  Window_OpenGL.cpp
Core/Public/: Behaviour.h  BoundingVolume.h  Camera.h  Delegates.h  DirectionalLight.h  Editor.h  Engine.h  Entity.h  Frustum.h  GUID.h  Game.h  Light.h  Material.h  Mesh.h  MeshData.h  Model.h  ModelLoader.h  Observable.h  PointLight.h  Quaternion.h  Rotating.h  Shader.h  Shapes.h  Skybox.h  SpotLight.h  Transform.h  Window.h  Window_OpenGL.h
Models/flower/: 313521_23_06_29_13_31_17.mtl  313521_23_07_03_04_53_27.mtl
Shaders/: shader.frag  shader.vert
